<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!-- Header -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_header">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/header_id"
                style="@style/TextViewStyle"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/header_description"
                android:gravity="center"
                style="@style/TextViewStyle"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/header_price"
                style="@style/TextViewStyle"/>

    </LinearLayout>

    <!-- List -->
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <ProgressBar
                android:id="@android:id/empty"
                android:indeterminate="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

        <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawSelectorOnTop="false"/>
    </FrameLayout>

    <!-- Footer -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#bbb">

        <TextView
                android:text="@string/footer_total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                style="@style/TextViewStyle"/>

        <TextView
                android:id="@+id/text_total"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/total_price_zero"
                style="@style/TextViewStyle"/>

    </LinearLayout>


</LinearLayout>
